# project-euler-solutions

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  problem_1.py  problem_10.py  problem_11.py  problem_12.py  problem_14.py  problem_17.py  problem_19.py  problem_2.py  problem_20.py  problem_21.py  problem_23.py  problem_24.py  problem_25.py  problem_27.py  problem_27_test.py  problem_28.py  problem_3.py  problem_31.py  problem_33.py  problem_35.py  problem_36.py  problem_37.py  problem_37_test.py  problem_38.py  problem_38_test.py  problem_39.py  problem_39_test.py  problem_4.py  problem_40.py  problem_40_test.py  problem_41.py  problem_42.py  problem_43.py  problem_43_test.py  problem_44.py  (+144 more)
cpp/: CMakeLists.txt  main.cpp  registry.cpp  registry.hpp  solution_1.cpp  timings.cpp  timings.hpp
cpp/solutions/: solution_1.cpp  solution_3.cpp  solution_8.cpp
project-euler-cpp/: .clang-format  .gitignore  CMakeLists.txt  primes.cpp  primes.hpp  registry.hpp  solution_1.cpp  solution_3.cpp  timings.cpp  timings.hpp
python/: pyproject.toml  runner.py  solution_21.py  solution_3.py  solution_32.py  solution_52.py  solution_73.py  solution_75.py  solution_78.py  solution_86.ipynb
python/src/project_euler_python/: primes.py  runner.py  specnum.py
python/src/python/: __init__.py
python/tests/: runner_test.py
rust/: Cargo.toml  pesr
rust/benches/: pe_bench.rs
rust/src/: continued_fractions.rs  digits.rs  diophantine.rs  fibonacci.rs  fractions.rs  integers.rs  lib.rs  main.rs  primes.rs  registry.rs  series.rs  special_sum_sets.rs  specnum.rs
rust/src/solutions/: mod.rs  s2.rs  s3.rs  solution_0001.rs  solution_0002.rs  solution_0005.rs  solution_0007.rs  solution_0012.rs  solution_0014.rs  solution_0091.rs  solution_0093.rs  solution_0098.rs  solution_0100.rs  solution_0101.rs  solution_0102.rs  solution_0103.rs  solution_0104.rs  solution_0105.rs  solution_1.rs  solution_10.rs  solution_100.rs  solution_12.rs  solution_14.rs  solution_2.rs  solution_3.rs  (+12 more)
(+170 files in other folders)
