[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Martin Ueding", email = "mu@martin-ueding.de" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
project-euler-python = "project_euler_python.runner:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
