[package]
name = "project-euler-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
inventory = "0.3.24"
itertools = "0.14.0"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"

[[bench]]
name = "pe_bench"
harness = false
